<resources>
    <string name="Drawer_Title_Home">"Home"</string>
    <string name="Drawer_Title_Route_Planner">"Route Planner"</string>
    <string name="Drawer_Title_My_Trips">"My trips"</string>
    <string name="Drawer_Title_Dashboard">"Dashboard"</string>
    <string name="Drawer_Title_Mobility_Coach">"Mobility Coach"</string>
    <string name="Drawer_Title_Profile">"Profile"</string>
    <string name="Drawer_Title_Settings">"Profile &amp; Settings"</string>
    <string name="Drawer_Title_Report_Issue">"Report issue"</string>
    <string name="Drawer_Title_Finish_Log_Out">"Logout"</string>
    <string name="login_what_is_email_address">"What is you email address?"</string>
    <string name="login_enter_your_password">"Enter your password"</string>
    <string name="Edit_Profile">"Edit profile"</string>
    <string name="Set_Home_And_Work">"Set home and work places"</string>
    <string name="Demographic_Info">"Demographic information"</string>
    <string name="Worthwhileness_Settings">"Worthwhileness settings"</string>
    <string name="Tutorials">"Tutorials"</string>
    <string name="Transport_Preferences">"Transport preferences"</string>
    <string name="App_Language">"App language"</string>
    <string name="Change_Password">"Change password"</string>
    <string name="Feedback">"Feedback"</string>
    <string name="Log_Out">"Log out"</string>
    <string name="Education_8th_Grade">"Up to 8th grade"</string>
    <string name="Education_Some_Highschool">"9th to 11th grade"</string>
    <string name="Education_Highschool">"High school (12th grade)"</string>
    <string name="Education_Some_College">"Some college credit, no degree"</string>
    <string name="Education_Training">"Technical/vocational training"</string>
    <string name="Education_Bachelor">"Bachelor’s degree"</string>
    <string name="Education_Master">"Master’s degree"</string>
    <string name="Education_Professional">"Professional degree"</string>
    <string name="Education_Doctorate">"Doctorate degree"</string>
    <string name="Education_Associate">"Associate degree"</string>
    <string name="Education_No_Schooling">"No Institutional Schooling"</string>
    <string name="Demographic_Option_General">"General"</string>
    <string name="Age">"Age"</string>
    <string name="Gender">"Gender"</string>
    <string name="Education">"Education"</string>
    <string name="Country">"Country"</string>
    <string name="City">"City"</string>
    <string name="Tutorial_Option_What_Is_Worthwhileness">"What is worthwhileness"</string>
    <string name="Productivity_Percentage">"Productivity %1$s%%"</string>
    <string name="Mind_Percentage">"Enjoyment %1$s%%"</string>
    <string name="Body_Percentage">"Fitness %1$s%%"</string>
    <string name="My_Trips">"My Trips"</string>
    <string name="Start_Trip">"Start trip"</string>
    <string name="End_Trip">"End trip"</string>
    <string name="Trip_Being_Recorded">"A trip is being recorded now"</string>
    <string name="Select_Trips_To_Merge">"Select trips from the list below to merge"</string>
    <string name="Confirm_Trips_To_Merge">"Confirm the selected trips to merge"</string>
    <string name="Select_Trips_To_Split">"Select trips from the list below to split"</string>
    <string name="Move_The_Map_To_Split">"Move the map to split trip"</string>
    <string name="Select_Trips_To_Delete">"Select trips from the list below to delete"</string>
    <string name="Split">"Split"</string>
    <string name="Merge">"Merge"</string>
    <string name="Delete">"Delete"</string>
    <string name="Select_Legs_To_Split">"Select legs and/or transfers from the list below to split"</string>
    <string name="Move_The_Map_To_Split_The_Leg">"Move the map to define the split point"</string>
    <string name="Edited">"Edited"</string>
    <string name="Select_Legs_To_Merge">"Select legs and/or transfers from the list below to merge"</string>
    <string name="Confirm_The_Legs_To_Merge">"Confirm the selected legs and/or transfers to merge"</string>
    <string name="Rate_Your_Edited_Trips">"Rate your edited trips"</string>
    <string name="Select_Legs_To_Delete">"Select legs to delete"</string>
    <string name="Confirm_The_Legs_To_delete">"Confirm the selected legs and/or transfers to delete"</string>
    <string name="Validated">"Validated"</string>
    <string name="How_Did_You_Travel">"How did you travel?"</string>
    <string name="Public_Transport">"Public Transport"</string>
    <string name="Active_Semi_Active">"Active/Semi-active"</string>
    <string name="Private_Motorised">"Private Motorised"</string>
    <string name="Not_Sure">"Not Sure"</string>
    <string name="Lousy">"Lousy"</string>
    <string name="Overall_Feel_About_Trip">"Overall, how did you feel about this trip?"</string>
    <string name="Great">"Great"</string>
    <string name="Travel_Time_Wasted_Min_Text">"All time was wasted"</string>
    <string name="Travel_Time_Wasted_Question_Text">"Was your travel time wasted or worthwhile?"</string>
    <string name="Travel_Time_Wasted_Max_Text">"All time was worthwhile"</string>
    <string name="Which_Factors_Most_Contributed">"Select the most important factors for the quality of your travel time"</string>
    <string name="Unfold_All_That_Apply">" Mark (+) for a positive experience or (-) for a negative experience"</string>
    <string name="Infrastructure_And_Services">"Infrastructure and services"</string>
    <string name="Comfort_And_Pleasantness">"Comfort and pleasantness"</string>
    <string name="Getting_There">"Getting there"</string>
    <string name="Tables">"Tables"</string>
    <string name="Toilets">"Toilets"</string>
    <string name="Food_Drink_Allowed">"Food/drink allowed"</string>
    <string name="Food_Drink_Available">"Food/drink available"</string>
    <string name="Shopping_Retail">"Shopping/retail"</string>
    <string name="Entertainment">"Entertainment"</string>
    <string name="Noise_Level">"Noise level"</string>
    <string name="Cleanliness">"Cleanliness"</string>
    <string name="Scenery">"Nature and scenery"</string>
    <string name="Todays_Weather">"Weather"</string>
    <string name="Privacy">"Privacy"</string>
    <string name="Traffic_Signals_Crossings">"Traffic signals/crossings"</string>
    <string name="Crowding_Congestion">"Crowding/congestion"</string>
    <string name="Traffic_Congestion_Delays">"Traffic congestion/delays"</string>
    <string name="Others_Comments">"Others/comments"</string>
    <string name="What_Did_You_Do_And_Value">"What exactly did you value doing?"</string>
    <string name="Driving_Cycling_Walking">"Driving/Cycling/Walking"</string>
    <string name="Relaxing_Sleeping">"Relaxing or sleeping"</string>
    <string name="Browsing_Social_Media">"Browsing or social media"</string>
    <string name="Reading_Writing_Paper">"Reading / writing (paper)"</string>
    <string name="Reading_Writing_Device">"Reading / writing (device)"</string>
    <string name="Listening_To_Audio">"Listening to audio"</string>
    <string name="Walking_Video_Gaming">"Watching video or gaming"</string>
    <string name="Talking_Including_Phone">"Talking (including phone)"</string>
    <string name="Accompanying_Someone">"Accompanying someone"</string>
    <string name="Eating_Drinking">"Eating / drinking"</string>
    <string name="Personal_Caring">"Personal care"</string>
    <string name="Thinking">"Thinking"</string>
    <string name="What_Value_Take_From_Part">"What value did you take from your time on this part of the trip?"</string>
    <string name="Paid_Work">"Paid work"</string>
    <string name="Personal_Tasks">"Personal tasks"</string>
    <string name="Enjoyment">"Enjoyment"</string>
    <string name="Fitness">"Fitness"</string>
    <string name="None">"None"</string>
    <string name="Some">"Some"</string>
    <string name="High">"High"</string>
    <string name="Thinking_About_Your_Trip_Title">"Would you have liked to use your travel time more for ... ?"</string>
    <string name="Productivity">"Productivity"</string>
    <string name="Anything_Else_Like_To_Share">"Anything else you'd like to share?"</string>
    <string name="Would_Like_To_Share">"I would like to share..."</string>
    <string name="Today">"Today"</string>
    <string name="Yesterday">"Yesterday"</string>
    <string name="Validate_Your_Trip">"New trip detected! Validate your trip to earn %d points!"</string>
    <string name="What_Was_Purpose">"What was the purpose of your trip?"</string>
    <string name="Mark_All_That_Apply">"Mark all that apply"</string>
    <string name="Work">"Work"</string>
    <string name="School_Education">"School/Education"</string>
    <string name="Home">"Home"</string>
    <string name="Everyday_Shopping">"Everyday Shopping"</string>
    <string name="Business_Trip">"Business Trip"</string>
    <string name="Leisure_Hobby">"Leisure/Hobby"</string>
    <string name="Pick_Up_Drop_Off">"Pick-up/Drop-off Someone"</string>
    <string name="Personal_Tasks_Errands">"Personal Tasks/Errand"</string>
    <string name="Trip_Itself">"Trip Itself"</string>
    <string name="Other">"Other"</string>
    <string name="Arrive_At_Fixed_Time">"Did you have to arrive at a fixed time?"</string>
    <string name="How_Often_Make_This_Trip">"How often do you make this trip?"</string>
    <string name="Regularly">"Regularly"</string>
    <string name="Occasionally">"Occasionally"</string>
    <string name="First_Time">"First Time"</string>
    <string name="Select_Part_Of_Trip_Feedback">"Select one part of your trip to provide further feedback"</string>
    <string name="Confirm_Modes_Of_Your_Trips">"Confirm the modes of your trip"</string>
    <string name="Transfer">"Transfer"</string>
    <string name="Auto_Detected">"Auto-detected"</string>
    <string name="Were_You_Walking_Or_Running">"Were you %s ?"</string>
    <string name="Did_You_Go_The_Mode">"Did you go by %s ?"</string>
    <string name="Walking">"Walking"</string>
    <string name="Jogging_Running">"Jogging/Running"</string>
    <string name="Bicycle">"Bicycle - conventional"</string>
    <string name="Car_Driver">"Car (Driver)"</string>
    <string name="Bus_Trolley_Bus">"Bus/Trolley Bus"</string>
    <string name="Tram">"Tram"</string>
    <string name="Metro">"Metro"</string>
    <string name="Thank_You_For_Submitting_This_Issue">"Thank you for submitting this issue. Confirm submission or proceed to another issue"</string>
    <string name="Confirm_And_Leave">"Confirm and leave"</string>
    <string name="Confirm_And_Submit_More">"Confirm and submit more"</string>
    <string name="Day">"Day"</string>
    <string name="Days_3">"3 Days"</string>
    <string name="Week">"Week"</string>
    <string name="Month">"Month"</string>
    <string name="Year">"Year"</string>
    <string name="Continue">"Continue"</string>
    <string name="Is_Your_Phone_Blocking_Trip_Detection">"Is your phone blocking trip detection?"</string>
    <string name="Woorti_Gives_You_Points_For_Each_Info">"Woorti gives you 25 points for each additional information item you fill in your profile."</string>
    <string name="If_Thats_The_Case_Fortunately_There_Is_Solution">"If that is the case, fortunately there is a solution. Get the instructions for your phone brand by pressing  the button below."</string>
    <string name="Enable_App_Activity">"Enable app activity"</string>
    <string name="Do_Not_Show_Again">"Do not show again"</string>
    <string name="Tell_Us_More_About_Yourself">"Tell us more about yourself"</string>
    <string name="Your_Data_Is_Anonymised">"Your data is anonymised."</string>
    <string name="Fill_In_Profile">"Fill in profile"</string>
    <string name="Later">"Later"</string>
    <string name="If_Your_Trips_Are_Frequently_Not_Being_Recorded_No_Link_To_Site">"If your trips are frequently not being recorded, your phone might be blocking this app’s activity. Check your battery optimization settings in Android to unblock Woorti."</string>
</resources>