<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/mobility_coach_popup_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/fillInProfileButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"

            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/home_surveys_answer_done_button"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/Fill_In_Profile"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView46" />

        <ImageView
            android:id="@+id/popupImageView"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginEnd="64dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="24dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/Tell_Us_More_About_Yourself"
            android:textAlignment="center"
            android:textColor="#ED7E03"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popupImageView" />

        <TextView
            android:id="@+id/textView42"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/Woorti_Gives_You_Points_For_Each_Info"
            android:textAlignment="center"
            android:textColor="#71706D"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView38" />

        <TextView
            android:id="@+id/textView46"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/Your_Data_Is_Anonymised"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView42" />

        <TextView
            android:id="@+id/laterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/Later"
            app:layout_constraintBottom_toBottomOf="@+id/dontShowAgainTextView"
            app:layout_constraintEnd_toStartOf="@+id/dontShowAgainTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dontShowAgainTextView" />

        <TextView
            android:id="@+id/dontShowAgainTextView"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/Do_Not_Show_Again"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/laterTextView"
            app:layout_constraintTop_toBottomOf="@+id/fillInProfileButton" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>