<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/mobility_coach_popup_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/enableAppActButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"

            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/my_trips_merge_split_button_shape"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/Enable_App_Activity"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView46" />

        <Button
            android:id="@+id/continueButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"

            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/home_surveys_answer_done_button"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/Continue"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enableAppActButton" />

        <ImageView
            android:id="@+id/popupImageView"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginEnd="96dp"
            android:layout_marginStart="96dp"
            android:layout_marginTop="24dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/Is_Your_Phone_Blocking_Trip_Detection"
            android:textAlignment="center"
            android:textColor="#ED7E03"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popupImageView" />

        <TextView
            android:id="@+id/textView42"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="24dp"
            android:text="@string/If_Your_Trips_Are_Frequently_Not_Being_Recorded_No_Link_To_Site"
            android:textAlignment="center"
            android:textColor="#71706D"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView38" />

        <TextView
            android:id="@+id/textView46"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/If_Thats_The_Case_Fortunately_There_Is_Solution"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/textView42"
            app:layout_constraintStart_toStartOf="@+id/textView42"
            app:layout_constraintTop_toBottomOf="@+id/textView42" />

        <TextView
            android:id="@+id/doNotShowAgainTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/Do_Not_Show_Again"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/continueButton" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>