<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/mobility_coach_popup_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/popUpMessageTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/Thank_You_For_Submitting_This_Issue"
            android:textAlignment="center"
            android:textColor="#ED7E03"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/confirmAndLeaveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"

            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/mobility_coach_set_goal_button_shape"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/Confirm_And_Leave"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/confirmAndSubmitMoreButton"
            app:layout_constraintEnd_toEndOf="@+id/popUpMessageTextView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/popUpMessageTextView"
            app:layout_constraintTop_toBottomOf="@+id/popUpMessageTextView" />

        <Button
            android:id="@+id/confirmAndSubmitMoreButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"

            android:layout_marginTop="16dp"
            android:background="@drawable/mobility_coach_set_goal_button_shape"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/Confirm_And_Submit_More"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/confirmAndLeaveButton"
            app:layout_constraintStart_toStartOf="@+id/confirmAndLeaveButton"
            app:layout_constraintTop_toBottomOf="@+id/confirmAndLeaveButton" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>